crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_comment_multiline_trailing_split_blockquote_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..33
  BLOCK_QUOTE@0..33
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HTML_BLOCK_RAW@2..23
      HTML_BLOCK_TAG@2..13
        TEXT@2..12 "<!-- multi"
        NEWLINE@12..13 "\n"
      HTML_BLOCK_TAG@13..23
        LINE_PREFIX@13..14 ">"
        LINE_PREFIX@14..15 " "
        TEXT@15..23 "line -->"
    PARAGRAPH@23..33
      TEXT@23..32 " trailing"
      NEWLINE@32..33 "\n"
